--- a/01-javascript/empleos.html
+++ b/01-javascript/empleos.html
@@ -86,8 +86,8 @@
       <h2>Resultados de búsqueda</h2>
 
       <div class="jobs-listings">
-        <article class="job-listing-card">
-          <div>
+        <article class="offer exp-lead location-remoto tech-javascript tech-react tech-nodejs job-listing-card">
+          <div id="job-offer" style="cursor: pointer;">
             <h3>Ingeniero de Software</h3>
             <small>Tech Solutions Inc. | Remoto</small>
             <p>Buscamos un ingeniero de software con experiencia en desarrollo web y conocimientos en JavaScript, React
@@ -98,7 +98,7 @@
           <button class="button-apply-job" id="boton-importante">Aplicar</button>
         </article>
 
-        <article class="job-listing-card">
+        <article class="offer exp-junior location-cdmx tech-python job-listing-card">
           <div>
             <h3>Analista de Datos</h3>
             <small>Data Driven Co. | Ciudad de México</small>
@@ -108,7 +108,7 @@
           <button class="button-apply-job">Aplicar</button>
         </article>
 
-        <article class="job-listing-card">
+        <article class="offer exp-mid location-guadalajara tech-java job-listing-card">
           <div>
             <h3>Desarrollador de Aplicaciones Móviles</h3>
             <small>Mobile Apps Ltd. | Guadalajara</small>
@@ -118,7 +118,7 @@
           <button class="button-apply-job">Aplicar</button>
         </article>
 
-        <article class="job-listing-card">
+        <article class="offer exp-senior location-remoto job-listing-card">
           <div>
             <h3>Ingeniero de DevOps</h3>
             <small>Cloud Services SA | Remoto</small>
